Добавлены контентные изображения

--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
                         <p class="catalog-item-image">
                             <!--   Клик по картинке должен вести на полноразмерную версию, поэтому оборачиваем в ссылку-->
                             <a href="catalog-item.html">
-                                <img src="img/travel-kit-baxter-of-california.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+                                <img src="img/Layer_38.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
                             </a>
                         </p>
                         <p class="catalog-item-price">
@@ -73,7 +73,7 @@
                         </h3>                                               
                         <p class="catalog-image">
                             <a href="catalog-item.html">
-                                <img src="img/moisturising-conditioner-baxter-of-california.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+                                <img src="img/Layer_30.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
                             </a>                          
                         </p>
                         <p class="catalog-item-price">
@@ -91,7 +91,7 @@
                         </h3>
                         <p class="catalog-image">
                             <a href="catalog-item.html">
-                                <img src="img/hair-gel-suavecito.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
+                                <img src="img/Layer_39.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
                             </a>
                         </p>
                         <p class="catalog-price">
@@ -109,7 +109,7 @@
                         </h3>
                         <p class="catalog-image">
                             <a href="catalog-item.html">
-                                 <img src="img/hair-clay-american-crew.jpg" width="220" height="165" alt="Глина для укладки волос «AMERICAN CREW»">                           
+                                 <img src="img/Layer_32.jpg" width="220" height="165" alt="Глина для укладки волос «AMERICAN CREW»">                           
                             </a>                       
                         </p>
                         <p>
@@ -128,7 +128,7 @@
                         </h3>
                         <p class="catalog-image">
                             <a href="catalog-item.html">
-                                <img src="img/hair-gel-american-crew.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
+                                <img src="img/Layer_33.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
                             </a>                       
                         </p>                       
                         <p>
@@ -146,7 +146,7 @@
                         </h3>
                         <p class="catalog-image">
                             <a href="catalog-item.html">
-                                <img src="img/shaving-kit-baxter-of-california.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+                                <img src="img/Layer_42.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
                             </a>                     
                         </p>                      
                         <p>
@@ -163,7 +163,7 @@
                 <!-- Пустая ссылка, т.к. мы на текущей странице. Но когда переключаемся - атрибут появится -->
                 <li class="pagination-item pagination-item-current"><a>2</a></li>
                 <li class="pagination-item"><a href="#">3</a></li>
-                <li class="pagination-item"><a href="#">4</a></li>
+                <li class="pagination-item"><a href=" ">4</a></li>
             </ul>    
         </main>
         
