--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <section class="gallery">
               <h2>Фотогалерея</h2>
               <figure class="gallery-content">
-                      <a href="#"><img src="img/studio.jpg" width="286" height="164" alt="Интерьер"></a>
+                      <a href="#"><img src="img/Layer_21.jpg" width="286" height="164" alt="Интерьер"></a>
               </figure>    
               <span class="button gallery-button button-back">Назад</span>
               <span class="button gallery-button button-next">Вперед</span>
