--- a/index.html
+++ b/index.html
@@ -9,22 +9,26 @@
   </head>
   <body>
       <header class="main-header">
-          <nav class="main-navigation">
-              <a class="main-header-logo">
-                  <img src="img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа Бородинский">
-              </a>
-              <ul class="site-navigation">
-                  <li><a href="info.html">Информация</a></li>
-                  <li><a href="news.html">Новости</a></li>
-                  <li><a href="price.html">Прайс-лист</a></li>
-                  <li><a href="catalog.html">Магазин</a></li>
-                  <li><a href="contacts.html">Контакты</a></li>
-              </ul>
-              <ul class="user-navigation">
-                  <li>
-                      <a class="login-link" href="login.html">Вход</a>
-                  </li>
-              </ul>
+          <nav class="main-navigation container">
+                  <a class="main-header-logo">
+                      <img src="img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа Бородинский">
+                  </a>
+              <div class="main-navigation-wrapper">
+                  <div class="container">
+                      <ul class="site-navigation">
+                          <li><a href="info.html">Информация</a></li>
+                          <li><a href="news.html">Новости</a></li>
+                          <li><a href="price.html">Прайс-лист</a></li>
+                          <li><a href="catalog.html">Магазин</a></li>
+                          <li><a href="contacts.html">Контакты</a></li>
+                      </ul>
+                      <ul class="user-navigation">
+                          <li>
+                              <a class="login-link" href="login.html">Вход</a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
           </nav> 
       </header>
       
@@ -151,24 +155,26 @@
       </main>
       
       <footer class="main-footer">
-          <p class="footer-contacts">
-              БАРБЕРШОП «БОРОДИНСКИЙ»<br>
-              АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8
-              <a href="map.html">КАК НАС НАЙТИ?</a><br>
-              ТЕЛЕФОН: +7 (495) 666-02-66
-          </p>
-          <div class="social-footer">
-              <b>Давайте дружить!</b>
-              <ul class="social-buttons">
-                  <li><a class="social-button" href="#">Мы в контакте</a></li>
-                  <li><a class="social-button" href="#">Мы на фейсбуке</a></li>
-                  <li><a class="social-button" href="#">Мы в инстаграме</a></li>
-              </ul>
+          <div class="container">
+              <p class="footer-contacts">
+                  БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+                  АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8
+                  <a href="map.html">КАК НАС НАЙТИ?</a><br>
+                  ТЕЛЕФОН: +7 (495) 666-02-66
+              </p>
+              <div class="social-footer">
+                  <b>Давайте дружить!</b>
+                  <ul class="social-buttons">
+                      <li><a class="social-button" href="#">Мы в контакте</a></li>
+                      <li><a class="social-button" href="#">Мы на фейсбуке</a></li>
+                      <li><a class="social-button" href="#">Мы в инстаграме</a></li>
+                  </ul>
+              </div>
+              <p class="footer-copyright">
+                  <b>Разработано</b>
+                  <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+              </p>
           </div>
-          <p class="footer-copyright">
-              <b>Разработано</b>
-              <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-          </p>
       </footer>
     </body>
 </html>
